# CTNet-Hilbert-Projector

./: .gitignore  CERTIFICATION.md  PROJECT_STATUS.md  README.md  STANDALONE.md  ctnet_omega_cubo6d_plegado_ctnet26.py  pyproject.toml  train_vram_up_coherence_ctnet.py
docs/: roadmap.md
examples/: benchmark_projective_superiority.py  calibrate_thesis_ising.py  demo_ising_compare.py  demo_small_projector.py  demo_thesis_ising.py  find_global_phase_cubo6d.py  optimize_thesis_ising.py  solve_ising_cubo6d_exact_fixed_point.py  solve_ising_cubo6d_only.py
scripts/: audit_strong_certificate.py  measure_projective_coherence_matrix.py  measure_projective_density.py  measure_projective_observables.py  measure_projective_phase.py  reproduce_strong_certificate.sh
src/ctnet_hilbert_projector/: __init__.py  branch_law_calibration.py  ctnet_omega_core.py  cubo_quantum_closure.py  exact_certification.py  hamiltonians.py  hilbert_projector.py  observer_bridge.py  presets.py  projective_engine.py  state_preparation.py  structural_closure.py  thesis_dynamics.py
tests/: test_audit_strong_certificate.py  test_cubo6d_only_route.py  test_exact_projective_certificate.py  test_hamiltonians.py  test_presets_and_contrast.py  test_projective_coherence_matrix.py  test_projective_density.py  test_projective_engine.py  test_projective_observables.py  test_projective_phase.py  test_projector.py  test_standalone_imports.py  test_structural_closure.py  test_thesis_dynamics.py
